--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,6 +63,32 @@ text-9xl,8rem,128px,1 (128px)
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     scroll-behavior: smooth;
+    position: relative;
+  }
+
+  body::before,
+  body::after {
+    content: "";
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 50%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.15;
+    z-index: -1;
+    pointer-events: none;
+  }
+
+  body::before {
+    left: 0;
+    background-image: url("/images/bg_left.webp");
+  }
+
+  body::after {
+    right: 0;
+    background-image: url("/images/bg_right.webp");
   }
 
   p {
